--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ build/
 dist/
 gui scratch.py
 vtu marks scraper app by nithinhm - CLI.py
+vtu marks scraper app by nithinhm - GUI.spec
+vtu marks scraper app by nithinhm.spec
