created new app for reval data collection

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ gui scratch.py
 vtu marks scraper app by nithinhm - CLI.py
 vtu marks scraper app by nithinhm - GUI.spec
 vtu marks scraper app by nithinhm.spec
+vtu reval marks scraper app by nithinhm - GUI.spec
