--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ vtu marks scraper app by nithinhm - CLI.py
 vtu marks scraper app by nithinhm - GUI.spec
 vtu marks scraper app by nithinhm.spec
 vtu reval marks scraper app by nithinhm - GUI.spec
+analyzer_app_nithinhm.py
+scraper_app_nithinhm.py
+analyzer_app_nithinhm.spec
+scraper_app_nithinhm.spec
+scraper_analyzer_app_nithinhm.spec
+scratch.py
